--- a/practica.tex
+++ b/practica.tex
@@ -1,14 +1,14 @@
 \documentclass[12pt]{article}
-\author{Adrià Cabeza}
+\author{Carlos Bergillos, Adrià Cabeza,Antoni Rambla}
 \title{Algorithms}
 \usepackage[utf8]{inputenc}
 \begin{document}
-\vspace{0.5cm}
-
 \begin{titlepage}
    \vspace*{\stretch{1.0}}
    \begin{center}
       \Large\textbf{Detecció de similitud de documents amb hashing }\\
+		\vspace{\stretch{0.05}}      
+      \large Departament de Ciències de la Computació\\
          \vspace*{\stretch{0.2}}
       Carlos Bergillos, Antoni Rambla, Adrià Cabeza
    \end{center}
@@ -16,8 +16,7 @@
 \end{titlepage}
 
 
-\newpage.
-\textsl{•}
+\newpage
 
 \end{document}
 
