--- a/practica.tex
+++ b/practica.tex
@@ -1,22 +1,57 @@
 \documentclass[12pt]{article}
-\author{Carlos Bergillos, Adrià Cabeza,Antoni Rambla}
-\title{Algorithms}
 \usepackage[utf8]{inputenc}
-\begin{document}
-\begin{titlepage}
-   \vspace*{\stretch{1.0}}
-   \begin{center}
-      \Large\textbf{Detecció de similitud de documents amb hashing }\\
-		\vspace{\stretch{0.05}}      
-      \large Departament de Ciències de la Computació\\
-         \vspace*{\stretch{0.2}}
-      Carlos Bergillos, Antoni Rambla, Adrià Cabeza
-   \end{center}
-   \vspace*{\stretch{2.0}}
-\end{titlepage}
+\author{Carlos Bergillos, Antoni Ramble, Adrià Cabeza}
+\title{Document similarity detection using hasing }
+\date{\today}
 
+
+\begin{document}
+  \maketitle  
+
+  
+	\begin{abstract}
+ESTO ES UNA PRUEBA PARA VER COMO QUEDA n this experiment we studied a very important physical effect by measuring the
+dependence of a quantity $V$ of the quantity $X$ for two different sample
+temperatures.  Our experimental measurements confirmed the quadratic dependence
+$V = kX^2$ predicted by Someone's first law. The value of the mystery parameter
+$k = 15.4\pm 0.5$~s was extracted from the fit. This value is
+not consistent with the theoretically predicted $k_{theory}=17.34$~s. We attribute this
+discrepancy to low efficiency of our $V$-detector.
+\end{abstract}
 
 \newpage
+\tableofcontents
+\newpage
+
+\section{Introduction}
+
+Minhashing: compresses large sets in such a wat that we can deduce the similatity of the underlying sets from their compressed versions. 
+When we search for similar items of any kind there may be far too many pairs of items to test each pair for their degree of similarity
+
+\section{Theory}
+
+First we have to focus into the definition of similarity, when we talk about the "Jaccard similarity",which is calculated by looking at the relative size of their intersection. 
+
+The Jaccard similarity, also known as Jaccard index is a statistical measure of similarity of sets. For two sets, it is defined as the size of the intersection divided by the size of the union of the sample sets:
+\medbreak
+\centerline{\small $J(A,B)=\frac{\left |A\cap B  \right |}{ \left |A\cup B  \right |} = \frac{\left |A\cap B  \right |}{ \left|A\right|+\left|B\right|-\left |A\cap B  \right |} $}
+
+
+
+\begin{thebibliography}{100}
+
+\bibitem{Similarity}
+J.\ Bank and B.\ Cole,
+\textit {Calculating the Jaccard similarity coefficient with map reduce for entity pairs in
+Wikipedia} (Wikipedia Similarity Team, 2008).
+
+\bibitem{Cambridge}
+J.\ Leskovec, A.\ Rajaraman and J.\ Ullman
+\textit{ Finding Similar Items. In Mining of Massive Datasets} (Cambridge University Press, 2014).
+
+
+
+\end{thebibliography}
 
 \end{document}
 
