--- a/practica.tex
+++ b/practica.tex
@@ -132,8 +132,7 @@ The hash values are uniformly distributed.
 
 In our project we have not choosen hash cryptographic functions (i.e. sha-1 or md5) because they are too slow for our purpose.
 
- 
-%he posat algunes que podríem fer servir
+
 \subsubsection{Modular Hashing}
 
 The hash function it takes the following form. 
@@ -215,7 +214,7 @@ S.\ Alzahrani and N. \ Salim, \textit{Fuzzy Semantic-Based String Similarity for
 S.\ Dahlgaard, M.\ Tejs Knudsen and M.\ Thorup, \textit{Practical Hash Functions for Similarity Estimation and Dimensionality Reduction} (University of Copenhagen)
 
 \bibitem{Universal string hashing}
-D.\ Lemire and O.\ Kaser, \textit{Strongly universal string hashing is fast}, (Université du Québec, Canadá & University of New Brunswick, Canada) 
+D.\ Lemire and O.\ Kaser, \textit{Strongly universal string hashing is fast} (Université du Québec Canadá and University of New Brunswick, Canada) 
 \end{thebibliography}
 
 \end{document}
