MEGA COMMIT amb permutacions

--- a/practica.tex
+++ b/practica.tex
@@ -202,12 +202,7 @@ Also in order to reduce the number of multiplications in order to make it faster
 
 \subsubsection{Murmur Hash}
 
-Consists in applying some multiplications (MU) and rotations (R) to the entry bytes to obtaint the hash. It uses multiple constants which are decided to make it a good hash function by passing 2 basic tests: 
-
-\begin{itemize}
-\item Avalanche Test: evaluates how the output changes if the input is slightly modified.  
-\item Chi-Squared Test: 
-\end{itemize}
+Consists in applying some multiplications (MU) and rotations (R) to the entry bytes to obtaint the hash. It uses multiple constants which are decided to make it a good hash function by passing 2 basic tests, the Avalanche Test that evaluates how the output changes if the input is slightly modified and the statistical Chi-Squared Test.
 
 \section{Data} %canviar el nom de la secció
 
@@ -215,7 +210,7 @@ Consists in applying some multiplications (MU) and rotations (R) to the entry by
 \begin{itemize}
 \item \textbf{Harry Potter and the Sourcerer Stone}: All the text from the first Harry Potter novel.
 \item \textbf{The Lord of The Rings: The return of the King}: The entire script from the last Lord of the Rings movie.
-\item \textbf{Star Wars}: MIRAR QUINA ÉS
+\item \textbf{Star Wars: Heir to the Empire}:  An Star Wars novel by Timothy Zahn. 
 \end{itemize}
 
 \subsection{Generating our data}
